--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-py-cord==2.0.0b1
+discord==1.7.3
 discord.py==1.7.3
 requests==2.27.1
 typing_extensions==4.1.0
+py-cord==2.0.0b1
 names==0.3.0
 rich==12.5.1
 deepl==1.14.0
+git+https://github.com/Rapptz/discord.py
+requests_toolbelt
